# ves-market-watch

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
apps/indicator-engine/: Dockerfile  README.md  pyproject.toml
apps/indicator-engine/config/: senales.v1.yaml
apps/indicator-engine/db/migrations/: 001_indicators.sql  002_signals.sql
apps/indicator-engine/docs/: design.md
apps/indicator-engine/src/indicator_engine/: __init__.py  __main__.py  config.py
apps/indicator-engine/src/indicator_engine/adapters/: memory.py
apps/indicator-engine/src/indicator_engine/adapters/amqp/: __init__.py  consumer.py  publisher.py
apps/indicator-engine/src/indicator_engine/application/: __init__.py  contracts.py  ports.py  process_official_rate.py  process_p2p_snapshot.py
apps/indicator-engine/src/indicator_engine/domain/: __init__.py  calculos.py  models.py  reglas.py
apps/indicator-engine/tests/: README.md  conftest.py
apps/indicator-engine/tests/contract/: test_indicators_event_schema.py  test_signal_event_schema.py
apps/indicator-engine/tests/e2e/: test_flujo_oficial_a_indicadores.py
apps/indicator-engine/tests/integration/: test_consumer_amqp.py  test_signals_repository.py
apps/indicator-engine/tests/unit/: test_calculos.py  test_process_official_rate.py  test_process_p2p_snapshot.py  test_referencia_p2p.py  test_reglas.py  test_schema_validation.py
apps/ingestor-bcv/: Dockerfile  README.md  pyproject.toml
apps/ingestor-bcv/certs/: README.md  bcv-ca-bundle.pem
apps/ingestor-bcv/db/migrations/: 001_official_rates.sql  002_suspect_resolution.sql
apps/ingestor-bcv/docs/: design.md
apps/ingestor-bcv/src/ingestor_bcv/: __init__.py  __main__.py  config.py  scheduler.py
apps/ingestor-bcv/src/ingestor_bcv/adapters/: memory.py
apps/ingestor-bcv/src/ingestor_bcv/application/: __init__.py  ports.py  revalidate_rates.py  sync_rates.py
apps/ingestor-bcv/src/ingestor_bcv/domain/: __init__.py  models.py  validation.py
apps/ingestor-bcv/tests/: README.md  conftest.py
apps/ingestor-bcv/tests/contract/: test_event_schema.py
apps/ingestor-bcv/tests/e2e/: test_ciclo_completo.py
apps/ingestor-bcv/tests/fixtures/: bcv_home.html
apps/ingestor-bcv/tests/integration/: test_amqp_publisher.py  test_bcv_client_tls.py  test_timescale_repository.py
apps/ingestor-bcv/tests/unit/: test_client.py  test_parser.py  test_revalidate_rates.py  test_sync_rates.py  test_validation.py
apps/ingestor-binance/: Dockerfile  README.md  pyproject.toml
apps/ingestor-binance/db/migrations/: 001_p2p_snapshots.sql
apps/ingestor-binance/docs/: design.md
apps/ingestor-binance/schemas/: binance-adv-search.response.json
apps/ingestor-binance/src/ingestor_binance/: __init__.py  __main__.py  config.py  scheduler.py
apps/ingestor-binance/src/ingestor_binance/adapters/: memory.py
apps/ingestor-binance/src/ingestor_binance/application/: __init__.py  capture_snapshot.py  ports.py
apps/ingestor-binance/src/ingestor_binance/domain/: __init__.py  models.py  normalizacion.py
apps/ingestor-binance/tests/: README.md  conftest.py
apps/ingestor-binance/tests/contract/: test_p2p_snapshot_schema.py
apps/ingestor-binance/tests/e2e/: test_flujo_p2p.py
apps/ingestor-binance/tests/fixtures/: adv_search_buy_p1.json  adv_search_sell_p1.json
apps/ingestor-binance/tests/integration/: test_client_http.py  test_publisher_amqp.py  test_repository.py
apps/ingestor-binance/tests/unit/: test_capture_snapshot.py  test_normalizacion.py  test_outliers.py  test_resilience.py
apps/ingestor-historico/: README.md  pyproject.toml
apps/ingestor-historico/db/migrations/: 001_historical_snapshots.sql
apps/ingestor-historico/src/ingestor_historico/: __init__.py  __main__.py  config.py
apps/ingestor-historico/src/ingestor_historico/adapters/: csv_reader.py  memory.py
apps/ingestor-historico/src/ingestor_historico/application/: cargar_historicos.py  ports.py
apps/ingestor-historico/src/ingestor_historico/domain/: estadisticas.py  models.py  parser.py
apps/ingestor-historico/tests/: conftest.py
apps/ingestor-historico/tests/fixtures/: query_result_muestra.csv
apps/ingestor-historico/tests/integration/: test_repository.py
apps/ingestor-historico/tests/unit/: test_cargar_historicos.py  test_estadisticas.py  test_parser.py
knowledge/: index.md  log.md
(+84 files in other folders)
