[project]
name = "ingestor-bcv"
version = "0.1.0"
description = "Ingesta de las tasas oficiales de cambio publicadas por el BCV (multi-moneda)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "aio-pika>=9.4",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "trustme>=1.1",
]

[project.scripts]
ingestor-bcv = "ingestor_bcv.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: adaptadores contra infraestructura real o red local (docker compose up -d --wait)",
    "e2e: ciclo completo contra RabbitMQ y TimescaleDB reales (docker compose up -d --wait)",
]
