[project]
name = "ingestor-binance"
version = "0.1.0"
description = "Ingesta del mercado P2P de Binance (USDT/VES): polling educado y eventos p2p.snapshot"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "aio-pika>=9.4",
    "asyncpg>=0.29",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ingestor-binance = "ingestor_binance.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "integration: adaptadores contra infraestructura real o red local (docker compose up -d --wait)",
    "e2e: flujo completo contra RabbitMQ y TimescaleDB reales (docker compose up -d --wait)",
]
